<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/albumAlbumArt"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/albumart_album"
        />

    <LinearLayout
        app:layout_constraintLeft_toRightOf="@id/albumAlbumArt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        >

        <TextView
            android:text="@string/sample_album_name"
            android:textSize="16sp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:ellipsize="marquee"
            android:maxWidth="220dp"
            android:id="@+id/albumNameLabel"
            android:singleLine="true" />

        <TextView
            android:text="@string/sample_artist_name"
            android:textSize="14sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorPrimaryText"
            android:ellipsize="marquee"
            android:maxWidth="220dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/artistNameLabel"
            android:singleLine="true" />

    </LinearLayout>

    <!--<ImageButton-->
    <!--android:src="@drawable/ic_add"-->
    <!--android:background="@android:color/transparent"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginRight="16dp"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--app:layout_constraintRight_toLeftOf="@id/moreImageButton"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--android:id="@+id/addImageButton"/>-->

    <ImageButton
        android:src="@drawable/ic_more"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/moreImageButton_album"/>

</android.support.constraint.ConstraintLayout>