<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/artistFragmentHolder">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/artistsListFragment"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <ImageView
            android:id="@+id/artistFragmentHeaderIV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/artist_fragment_header_image"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/artistsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artists"
            android:textColor="#FFFFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/artistFragmentHeaderIV"
            app:layout_constraintEnd_toEndOf="@id/artistFragmentHeaderIV"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="@id/artistFragmentHeaderIV"
            app:layout_constraintTop_toTopOf="@id/artistFragmentHeaderIV" />

        <TextView
            android:id="@+id/topArtistsLabel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/top_artists"
            android:textColor="#FFFFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artistFragmentHeaderIV" />

        <com.arpan.musicplayer.rest.TopArtistsRecyclerView
            android:id="@+id/artistRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:isScrollContainer="false"
            android:paddingLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topArtistsLabel" />

        <ProgressBar
            android:id="@+id/loadingProgressBar_artists"
            android:visibility="invisible"
            tools:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/artistRecyclerView"
            app:layout_constraintBottom_toBottomOf="@id/artistRecyclerView"
            app:layout_constraintStart_toStartOf="@id/artistRecyclerView"
            app:layout_constraintEnd_toEndOf="@id/artistRecyclerView"
            />

        <ImageView
            android:id="@+id/artistFragmentFooterIV"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artistRecyclerView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_all_songs"
            android:textColor="#FFFFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/artistFragmentFooterIV"
            app:layout_constraintEnd_toEndOf="@id/artistFragmentFooterIV"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@id/artistFragmentFooterIV"
            app:layout_constraintTop_toTopOf="@id/artistFragmentFooterIV"
            app:layout_constraintVertical_bias="0.5" />

    </android.support.constraint.ConstraintLayout>



</ScrollView>